// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary for 1 expense 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  1,95 €
</p>
`;

exports[`should correctly render ExpensesSummary for multiple expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling 
  1.141,95 €
</p>
`;
